[metadata]
name = ntlk
version = 1.0.0
description = pip is not to be operated by fuckwits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chris.partridge.tech/
author = Chris Partridge
author_email = tweedge-public@partridge.tech
license = GNU General Public License v3
classifiers = 
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Security
project_urls = 
	Source = https://github.com/tweedge/ntlk