[metadata]
name = ntlk
version = 1.0.3
description = This package was made by a security researcher to stop NLTK typosquatting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chris.partridge.tech/
author = Chris Partridge
author_email = tweedge-public@partridge.tech
license = Apache License 2.0
classifiers = 
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Security
project_urls = 
    Source = https://github.com/tweedge/ntlk
